objects/ACE_Compliance_Cross_Reference__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is used for value translation of compliance vetting data sent to ACE.</description>
    <fields>
        <fullName>Destination_Value__c</fullName>
        <label>Destination Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Value__c</fullName>
        <label>Source Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>ACE Compliance Cross Reference</label>
</CustomObject>